--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="inner">
           
         
-          <p class="headding">Guess The Number</p>
+          <p class="headding">Guess The Number...?</p>
           <div class="symbol"><p class="symdis">?</p></div>
           <p class="display">Start Guessing..!</p>
           <div class="input">
