--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container">
       <div class="reset">
-          <button class="change">Reset</button>
+          <button class="replay change">Reset</button>
           <p class="high">High Score: 20</p>
       </div>
       <div class="inner">
